--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,7 @@ body{
 }
 
 .chart-list{
+    margin:0;
     padding: 0;
     list-style-type: none;
     width: 375px;
@@ -81,15 +82,17 @@ body{
     max-height: 30vh;
     display: flex;
     justify-content: space-evenly;
+    align-items: flex-end;
 }
 .days-list{
+    margin:0;
     padding: 0;
     list-style-type: none;
     width: 375px;
     max-width: 80vw;
-    
     display: flex;
     justify-content: space-evenly;  
+    gap:0.8rem;
 }
 
 hr{
