--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,23 @@ body{
     align-items: start;
 }
 
+.total-balance-title{
+    margin:0;
+    padding: 0;
+    font-weight: 400;
+    opacity: 0.8;;
+}
+.total-balance-value{
+    padding: 0;
+    margin:0.8rem 0 0 0;
+    font-size: 28px;
+    font-weight: 700;
+}
+.circles{
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
 .white-circle{
     margin: 0;
     padding: 0;
@@ -57,8 +74,8 @@ body{
     width: 41px;
     height: 41px;
     border-radius: 50%;
-    position: absolute;
-    left: 330px
+    position: relative;
+    left:1.5rem;
 }
 
 .black-circle{
@@ -70,15 +87,7 @@ body{
     border-radius: 50%;
 }
 
-.total-balance-title{
-    margin-top: 0.3rem;
-}
-.total-balance-value{
-    padding: 0;
-    margin:0;
-    font-size: 28px;
-    font-weight: 700;
-}
+
 
 .main-chart{
     margin: 0 auto;
@@ -110,7 +119,7 @@ body{
     height: 20vh;
     max-height: 30vh;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: flex-end;
 }
 .days-list{
@@ -125,14 +134,43 @@ body{
 }
 
 hr{
-    width: 70vw;
+    margin: 2.5rem 0 1.5rem 0;
+    padding: 0;
+    width: 85vw;
     max-width: 370px;
+
 }
 
 
 .card-footer{
+    width: 85vw;
+    max-width: 375px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+#month-total h1{
+    margin: 0;
+    padding: 0;
+    margin-top: 0.5rem;
+    font-size: 32px;
+}
+#month-total span{
+    opacity:0.7;
+}
+
+#percent-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: flex-end;
+}
+#percent-section h4{
+    margin: 0;
+    padding: 0;
+}
+#percent-section div{
+    opacity:0.7;
 }
 
 .card-footer section:first-child{
@@ -143,5 +181,9 @@ hr{
 }
 
 
-.attribution { font-size: 11px; text-align: center;}
+.attribution { 
+    font-size: 12px;
+    margin-top: 0.5rem;
+    text-align: center;
+}
 .attribution a { color: hsl(228, 45%, 44%); }
