--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ hr{
     justify-content: space-between;
 }
 
-#month-total h1{
+#month-total h2{
     margin: 0;
     padding: 0;
     margin-top: 0.5rem;
@@ -165,9 +165,10 @@ hr{
     justify-content: end;
     align-items: flex-end;
 }
-#percent-section h4{
+#percent-section span{
     margin: 0;
     padding: 0;
+    font-weight: 700;
 }
 #percent-section div{
     opacity:0.7;
